ref# 修改资源文件命名

--- a/feature/launch/app/src/main/res/values/strings.xml
+++ b/feature/launch/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
-<resources>
-    <string name="name">scaffold</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="name" tools:ignore="ResourceName">scaffold</string>
 </resources>
